src/objects/SAML_Exception__c.object
<CustomObject>
    <fields>
        <fullName>Assertion__c</fullName>
        <label>Assertion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cookies__c</fullName>
        <label>Cookies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Headers__c</fullName>
        <label>Headers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Host_IP__c</fullName>
        <label>Host IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <label>Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>SAML Exception</label>
    <nameField>
        <displayFormat>SE-{00000}</displayFormat>
        <label>SAML Exception Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAML Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>